7) goahead: set HT_LDPC as VHT_LDPC (unify webUI control).<br>
8) nvram: fix store old macs.<br>
9) kernel: ralink_raeth: add support MT7621 QDMA, split PDMA/QDMA code, code refactoring.<br>
10) kernel: ralink_raeth: force up MAC for each ESW PHY.<br>
11) kernel: ralink_raeth: fix wireless/external offload concurrent with BQL (recycle TX to PPE stuck issue).<br>
12) kernel: ralink_raeth: do not ack INT status on NAPI poll active (MT7621 GIC pending INT issue).<br>
13) kernel: ralink_hw_nat: add support MT7621 QDMA, write FoE descriptors by DWORD chunk.<br>
14) kernel: ralink_hw_nat: add support MT7621 multicast offload.<br>
15) kernel: ralink_hw_nat: optimize mark/test DPORT_PPE.<br>
16) kernel: ralink_arch: fix typo in MT7621 PCIe interrupts map.<br>
17) kernel: ralink_wifi: fix MT7610/12/02/03 bug on set FixedTxMode.<br>
18) kernel: mips: fix race condition in lazy cache flushing.<br>
19) kernel: jump_label: split jumplabel ratelimit.<br>
20) kernel: jump_label: allow asm/jump_label.h to be included in assembly.<br>
21) kernel: jump_label: allow jump labels to be used in assembly.<br>
22) kernel: conntrack: fix one way voice issue if SIP ALG enabled.<br>
23) kernel: netfilter: fix issue of some SIP Providers use only port 5060 for send/listen calls.<br>
24) kernel: net: less interrupt masking in NAPI.<br>
25) kernel: net: move napi polling code out of net_rx_action.<br>
26) kernel: net: always poll at least one device in net_rx_action.<br>
27) kernel: net: remove k{un}map_skb_frag().<br>
28) kernel: net: simple_strtoul cleanup.<br>
29) kernel: net: dont drop packet but consume it.<br>
<br>
<br>
<b>TODO:</b><br>
1) port support l2tp/pptp hardware NAT offload (really needed??? in sdk very ugly code).<br>
2) full russian ui (need help community or employ the web developer).<br>
3) need add irqbalance in WebUI (in last stage of 7621 dev).<br>
4) need add davfs2 webui for managment online disk drives (as yandex disk and others).<br>
<br>
<br>
<br>